ASSERTION FAILED: layoutState->m_renderer == this in WebCore::RenderBlock::offsetFromLogicalTopOfFirstPage https://bugs.webkit.org/show_bug.cgi?id=118587

Patch by Mihai Maerean <mmaerean@adobe.com> on 2013-07-17
Reviewed by David Hyatt.

Source/WebCore:

The fix consists in not calling containingBlockLogicalHeightForPositioned for flow threads (in
RenderBox::availableLogicalHeightUsing) as it gets to handle the RenderView as it would have been flowed into
the flow thread.

Test: fast/regions/crash-div-outside-body-vertical-rl.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::availableLogicalHeightUsing):

LayoutTests:

* fast/regions/crash-div-outside-body-vertical-rl-expected.html: Added.
* fast/regions/crash-div-outside-body-vertical-rl.html: Added.

Canonical link: https://commits.webkit.org/136648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152768 268f45cc-cd09-0410-ab3c-d52691b4dbfc